Publish event to all sessions instead of current session #2981